--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_URL="postgres://akhil:newpass@localhost:5432/stocksdb"
+POSTGRES_URL="postgres://postgres:1001@localhost:5432/stocksdb?sslmode=disable"
